--- a/TicketManagementSystem_Capstone/View/CreateNewCustomerView.xaml
+++ b/TicketManagementSystem_Capstone/View/CreateNewCustomerView.xaml
@@ -10,8 +10,8 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -29,13 +29,14 @@
         </Grid.RowDefinitions>
         
         <!--Customer Information Area-->
-        <Label Content="Customer Information" Grid.Row="0" FontSize="20" Grid.ColumnSpan="2"/>
+        <Label Content="Customer Information" Grid.ColumnSpan="2" FontSize="20" />
 
         <!--Customer Name -->
         <Label Content="Customer Name:" Grid.Row="1"/>
         <TextBox x:Name="CustomerNameTextBox"
             Text="{Binding CustomerName, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}"
-                 Grid.Row="1" Grid.Column="1"/>
+                 Grid.Row="1" Grid.Column="1"
+                 HorizontalAlignment="Left"/>
         <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=CustomerNameTextBox}"
                Grid.Row="1" Grid.Column="2"/>
         
@@ -43,7 +44,8 @@
         <Label Content="Phone Number:" Grid.Row="2"/>
         <TextBox x:Name="PhoneTextBox"
             Text="{Binding Phone, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
-                 Grid.Row="2" Grid.Column="1"/>
+                 Grid.Row="2" Grid.Column="1"
+                 HorizontalAlignment="Left"/>
         <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=PhoneTextBox}"
                Grid.Row="2" Grid.Column="2"/>
 
@@ -51,7 +53,8 @@
         <Label Content="Email:" Grid.Row="3"/>
         <TextBox x:Name="EmailTextBox"
             Text="{Binding Email, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}"
-                 Grid.Row="3" Grid.Column="1"/>
+                 Grid.Row="3" Grid.Column="1"
+                 HorizontalAlignment="Left"/>
         <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=EmailTextBox}"
         Grid.Row="3" Grid.Column="2"/>
         
@@ -60,7 +63,8 @@
         <ComboBox x:Name="PriorityComboBox"
                   ItemsSource="{Binding Priorities}" 
                   SelectedItem="{Binding Priority, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}"
-                  Grid.Row="4" Grid.Column="1"/>
+                  Grid.Row="4" Grid.Column="1"
+                  HorizontalAlignment="Left"/>
         <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=PriorityComboBox}"
                Grid.Row="4" Grid.Column="2"/>
         
@@ -68,15 +72,18 @@
         <Label Content="Address:" Grid.Row="5"/>
         <TextBox x:Name="AddressTextBox"
             Text="{Binding Address, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
-                 Grid.Row="5" Grid.Column="1"/>
+                 Grid.Row="5" Grid.Column="1"
+                 HorizontalAlignment="Left"/>
         <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=AddressTextBox}"
-                Grid.Row="5" Grid.Column="2"/>
+                Grid.Row="5" Grid.Column="2"
+               />
         
         <!--Customer City-->
         <Label Content="City:" Grid.Row="6"/>
         <TextBox x:Name="CityTextBox"
                  Text="{Binding City, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
-                 Grid.Row="6" Grid.Column="1"/>
+                 Grid.Row="6" Grid.Column="1"
+                 HorizontalAlignment="Left"/>
         <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=CityTextBox}"
                  Grid.Row="6" Grid.Column="2"/>
         
@@ -84,19 +91,24 @@
         <Label Content="State:" Grid.Row="7"/>
         <TextBox x:Name="StateTextBox"
                  Text="{Binding State, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
-                 Grid.Row="7" Grid.Column="1"/>
+                 Grid.Row="7" Grid.Column="1"
+                 HorizontalAlignment="Left"/>
         <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=StateTextBox}"
                Grid.Row="7" Grid.Column="2"/>
         <!--Customer Zip-->
         <Label Content="Zip Code:" Grid.Row="8"/>
         <TextBox x:Name="ZipTextBox"
                  Text="{Binding Zip, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
-                 Grid.Row="8" Grid.Column="1"/>
+                 Grid.Row="8" Grid.Column="1"
+                 HorizontalAlignment="Left"/>
         <Label Content="{Binding (Validation.Errors)[0].ErrorContent, ElementName=ZipTextBox}"
                Grid.Row="8" Grid.Column="2"/>
         
         <!--Buttons-->
-        <Button Content="Create Customer" Command="{Binding CreateCustomerCommand}" Grid.Row="9"/>
-        <Button Content="Clear" Command="{Binding ClearCommand}" Grid.Row="9" Grid.Column="1"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="9" Grid.ColumnSpan="2">
+            <Button Content="Create Customer" Command="{Binding CreateCustomerCommand}"/>
+            <Button Content="Clear" Command="{Binding ClearCommand}" />
+        </StackPanel>
+        
     </Grid>
 </UserControl>
