--- a/TicketManagementSystem_Capstone/View/CreateNewTicketView.xaml
+++ b/TicketManagementSystem_Capstone/View/CreateNewTicketView.xaml
@@ -41,93 +41,127 @@
         <!-- Ticket Title-->
         <Label Content="Title:" Grid.Row="1"/>
         <TextBox x:Name="TitleTextBox"
-                 Text="{Binding Title}" 
-                 Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"
+                 Text="{Binding Title, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}" 
+                 Grid.Row="1" Grid.Column="1" 
                  HorizontalAlignment="Left"
                  />
         <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent, ElementName=TitleTextBox}"
                    Grid.Row="1" Grid.Column="2"/>
+        
         <!-- Description -->
         <Label Content="Description:" Grid.Row="2"/>
         <TextBox x:Name="DescriptionTextBox"
-                 Text="{Binding Description}" 
+                 Text="{Binding Description, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" 
                  Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"
                  HorizontalAlignment="Left"
                  TextWrapping="Wrap"/>
+        <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent, ElementName=DescriptionTextBox}"
+                   Grid.Row="2" Grid.Column="2"/>
         
         <!--Ticket Status-->
         <Label Content="Status:" Grid.Row="3"/>
-        <ComboBox  ItemsSource="{Binding Statuses}"  SelectedItem="{Binding Status}"
+        <ComboBox  x:Name="StatusComboBox"
+                   ItemsSource="{Binding Statuses}" SelectedItem="{Binding Status, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}"
                    Grid.Row="3" Grid.Column="1" 
-                   MinWidth="100" HorizontalAlignment="Left"/>
+                   HorizontalAlignment="Left"/>
+        <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent, ElementName=StatusComboBox}"
+                   Grid.Row="3" Grid.Column="2"/>
         
         <!--Ticket Assigned To-->
         <Label Content="Assigned To:" Grid.Row="4"/>
-        <ComboBox ItemsSource="{Binding Groups}" SelectedItem="{Binding AssignedTo}"
-                  Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2"
+        <ComboBox x:Name="AssignedComboBox"
+                  ItemsSource="{Binding Groups}" SelectedItem="{Binding AssignedTo, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}"
+                  Grid.Row="4" Grid.Column="1"
                   HorizontalAlignment="Left" Height="20"/>
-        
+        <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent, ElementName=AssignedComboBox}"
+                   Grid.Row="4" Grid.Column="2"/>
         <!--Customer Information Area-->
-        <Label Content="Customer Information" Grid.Row="5" FontSize="20" Grid.ColumnSpan="2"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="5" Grid.ColumnSpan="3">
+            <Label Content="Customer Information" FontSize="20"/>
+            <Label Content="Existing Customer Selection:" VerticalAlignment="Center"/>
+            <ComboBox ItemsSource="{Binding ExistingCustomers}"
+                      SelectedItem="{Binding SelectedCustomer}"
+                      DisplayMemberPath="Name"
+                      VerticalAlignment="Center"/>
+        </StackPanel>
+        
         
         <!--Customer Name -->
         <Label Content="Customer Name:" Grid.Row="6"/>
-        <TextBox Text="{Binding CustomerName}" 
+        <TextBox x:Name="CustomerNameTextBox"
+                 Text="{Binding CustomerName, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}" 
                  Grid.Row="6" Grid.Column="1" 
-                 Grid.ColumnSpan="2"
                  HorizontalAlignment="Left"/>
+        <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent, ElementName=CustomerNameTextBox}"
+                   Grid.Row="6" Grid.Column="2"/>
+            
         <!--Customer Phone Number-->
-        
         <Label Content="Phone Number:" 
                Grid.Row="7"/>
-        <TextBox Text="{Binding Phone}" 
+        <TextBox x:Name="CustomerPhoneTextBox"
+                 Text="{Binding Phone, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}" 
                  Grid.Row="7" Grid.Column="1"
-                 Grid.ColumnSpan="2"
                  HorizontalAlignment="Left"/>
-        
+        <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent, ElementName=CustomerPhoneTextBox}"
+                   Grid.Row="7" Grid.Column="2"/>
+            
         <!-- Customer Email -->
         <Label Content="Email:" 
                Grid.Row="8"/>
-        <TextBox Text="{Binding Email}" 
+        <TextBox x:Name="CustomerEmailTextBox"
+                 Text="{Binding Email, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}" 
                  Grid.Row="8" Grid.Column="1"
-                 Grid.ColumnSpan="2"
                  HorizontalAlignment="Left"/>
-        
+        <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent, ElementName=CustomerEmailTextBox}"
+                   Grid.Row="8" Grid.Column="2"/>
+            
         <!-- Customer Priority -->
         <Label Content="Priority:" Grid.Row="9"/>
-        <ComboBox ItemsSource="{Binding Priorities}" 
-              SelectedItem="{Binding Priority}"
-                  Grid.Row="9" Grid.Column="1"/>
-        
+        <ComboBox x:Name="PriorityComboBox"
+                  ItemsSource="{Binding Priorities}" 
+                  SelectedItem="{Binding Priority, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}"
+                  Grid.Row="9" Grid.Column="1"
+                  HorizontalAlignment="Left"/>
+        <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent, ElementName=PriorityComboBox}"
+                   Grid.Row="9" Grid.Column="2"/>
+            
         <!--Customer Address-->
         <Label Content="Address:" Grid.Row="10"/>
-        <TextBox Text="{Binding Address}" 
+        <TextBox x:Name="CustomerAddressTextBox"
+                 Text="{Binding Address, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}" 
                  Grid.Row="10" Grid.Column="1"
-                 Grid.ColumnSpan="2"
                  HorizontalAlignment="Left"/>
-        
+        <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent,ElementName=CustomerAddressTextBox}"
+                   Grid.Row="10" Grid.Column="2"/>
+            
         <!--Customer City-->
         <Label Content="City:" Grid.Row="11"/>
-        <TextBox Text="{Binding City}" 
-         Grid.Row="11" Grid.Column="1"
-                 Grid.ColumnSpan="2"
+        <TextBox x:Name="CustomerCityTextBox"
+                 Text="{Binding City, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}" 
+                 Grid.Row="11" Grid.Column="1"
                  HorizontalAlignment="Left"/>
-        
+        <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent, ElementName=CustomerCityTextBox}"
+                   Grid.Row="11" Grid.Column="2"/>
         <!--Customer State-->
         <Label Content="State:" Grid.Row="12"/>
-        <TextBox Text="{Binding State}" 
-                Grid.Row="12" Grid.Column="1"
-                 Grid.ColumnSpan="2"
+        <TextBox x:Name="CustomerStateTextBox"
+                 Text="{Binding State, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}" 
+                 Grid.Row="12" Grid.Column="1"
                  HorizontalAlignment="Left"/>
+        <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent, ElementName=CustomerStateTextBox}"
+                   Grid.Row="12" Grid.Column="2"/>
         <!--Customer Zip-->
         <Label Content="Zip Code:" Grid.Row="13"/>
-        <TextBox Text="{Binding Zip}" 
-                Grid.Row="13" Grid.Column="1"
-                 Grid.ColumnSpan="2"
+        <TextBox x:Name="CustomerZipTextBox"
+                 Text="{Binding Zip, NotifyOnValidationError=True, UpdateSourceTrigger=PropertyChanged}" 
+                 Grid.Row="13" Grid.Column="1"
                  HorizontalAlignment="Left"/>
+        <TextBlock Text="{Binding (Validation.Errors)[0].ErrorContent, ElementName=CustomerZipTextBox}"
+                   Grid.Row="13" Grid.Column="2"/>
         <!--Buttons-->
         <Button Content="Create Ticket" Command="{Binding CreateTicketCommand}" Grid.Row="14"/>
-        <Button Content="Clear" Command="{Binding ClearCommand}" Grid.Row="14" Grid.Column="1"/>
+        <Button Content="Clear" Command="{Binding ClearCommand}" Grid.Row="14" Grid.Column="1"
+                HorizontalAlignment="Left"/>
         
     </Grid>
 </UserControl>
