--- a/TicketManagementSystem_Capstone/View/ReportsTabControlView.xaml
+++ b/TicketManagementSystem_Capstone/View/ReportsTabControlView.xaml
@@ -10,7 +10,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <TabControl>
-            <TabItem Header="Report" IsSelected="True">
+            <TabItem Header="Ticket Closure Report" IsSelected="True">
                 <ContentControl Content="{Binding CurrentTabView}"/>
             </TabItem>
         </TabControl>
